2009-05-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-ui.cpp: Protect against a null surface.

	* mediaelement.cpp: Get the surface from the deployment (which should
	  always have a surface) instead of the media element's surface
	  (which is not guaranteed to be set always).

2009-05-28  Alan McGovern  <amcgovern@novell.com>

	* control.cpp|h: Control.IsEnabled propagates to its children
	when the control is Loaded.

2009-05-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* src.mdp: Updated.

2009-05-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mms-downloader.cpp: Custom headers must be requested before
	  opening the downloader.

2009-05-28  Andreia Gaita  <avidigal@novel.com>

	* timeline.cpp: Stop the clock when you call Stop.

2009-05-27  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (TextBoxBase::SyncAndEmit): Now takes a sync_text
	argument which defaults to true. If not set, we avoid calling
	SyncText() even if emit has the TEXT_CHANGED bit set.
	(TextBox::OnPropertyChanged): Call SyncAndEmit() with sync_text =
	false if the value was just set to null.

2009-05-27  Alan McGovern  <amcgovern@novell.com>

	* control.h:
	* control.cpp: Implement correct propagation of
	  Control.IsEnabled. Children of disabled controls are
	  disabled. When their parent is re-enabled, they go back to
	  their previous state.

2009-05-27  Jeffrey Stedfast  <fejj@novell.com>

	Fixes to make sure that an TextChanged and SelectionChanged events
	are emitted after each and every change to the Text/Selection
	properties occurs.

	* textbox.cpp (TextBoxBase::BatchPush): Call at the start of each
	batch operation. Prevents SyncAndEmit() from doing anything until
	all nested batch operations are completed.
	(TextBoxBase::BatchPop): Call at the end of each
	batch operation.
	(TextBoxBase::*): Instead of using inkeypress, use the more
	generic BatchPush()/Pop().
	(TextBox::OnPropertyChanged): Call SyncAndEmit() after
	Text/Selection changes.